Redefine the properties from custom properties file to application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.profiles.active=hindi
+
+test.username=Akshay
+test.password=password
+test.url=exampleURL
+
+test.jms.username=JMS username
+test.jms.password=password
+test.jms.url=testURL
