Add the example of spring boot profile properties

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,10 @@ test:
     username: JMS username
     password: password
     url: testURL
+
+---
+spring:
+    profiles:de
+test:
+  jms:
+    username: JMS username $$$$ German
